# falsetto

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
apps/game/: forms.py  services.py  tests.py  urls.py  views.py
apps/lyrics/: services.py  tests.py  urls.py  views.py
apps/lyrics/services/: __init__.py  api.py  helper.py  regex.py
apps/pages/: context_processors.py  urls.py  views.py
apps/users/: adapters.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
assets/css/: input.css
core/: settings.py  urls.py
templates/: base.html
templates/account/: login.html  logout.html  password_reset.html  signup.html
templates/components/: footer.html  navbar.html
templates/game/: game-over.html  game.html  index.html  lobby.html  victory.html
templates/pages/: about.html  contact.html  faq.html  legal.html
templates/users/: profile.html  settings.html
