[project]
name = "falsetto"
version = "0.1.0"
description = "A guess the lyrics app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "django-environ",
    "django-tailwind-cli",
    "django-widget-tweaks",
    "gunicorn",
    "whitenoise[brotli]",
    "django-allauth",
    "pillow",
    "django-htmx",
    "requests>=2.33.1",
]
